# saorsa-node

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  chunk-addresses.txt
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
deploy/monitoring/: grafana-saorsa-complete.json  grafana-saorsa-data.json  grafana-saorsa-metrics.json
deploy/monitoring/grafana/dashboards/: saorsa-testnet.json
deploy/monitoring/prometheus/: prometheus.yml
deploy/monitoring/prometheus/rules/: saorsa-alerts.yml
deploy/scripts/: manage-nodes.sh  spawn-nodes.sh  validate-network.sh
deploy/terraform/: main.tf
deploy/terraform/cloud-init/: monitoring.yml  worker.yml
docs/: DESIGN.md  TESTNET_500_NODE_PLAN.md
scripts/testnet/: build-and-deploy.sh  check-all.sh  check-health.sh  deploy-all.sh  run-data-tests.sh  setup-limits.sh  spawn-nodes.sh  start-all.sh  start-genesis.sh  start-nodes.sh  start-remaining.sh  stop-all.sh  testnet-endurance.sh
src/: attestation.rs  config.rs  devnet.rs  error.rs  lib.rs  node.rs  probe.rs
src/ant_protocol/: chunk.rs  mod.rs
src/client/: chunk_protocol.rs  data_types.rs  mod.rs  quantum.rs
src/migration/: decrypt.rs
src/payment/: metrics.rs  mod.rs  quote.rs  verifier.rs  wallet.rs
src/storage/: disk.rs  handler.rs  mod.rs
src/upgrade/: apply.rs  mod.rs  monitor.rs
testnet-logs/: chunk-addresses-20251217-194533.txt
tests/e2e/: integration_tests.rs  live_testnet.rs  mod.rs  testnet.rs  testnet_data_ops.rs
tests/e2e/data_types/: chunk.rs
