[package]
name = "saorsa-node"
version = "0.3.1"
edition = "2021"
authors = ["David Irvine <david.irvine@maidsafe.net>"]
description = "Pure quantum-proof network node for the Saorsa decentralized network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/saorsa-node"
keywords = ["p2p", "decentralized", "quantum-safe", "post-quantum", "dht"]
categories = ["network-programming", "cryptography"]
rust-version = "1.75"

[lib]
name = "saorsa_node"
path = "src/lib.rs"

[[bin]]
name = "saorsa-node"
path = "src/bin/saorsa-node/main.rs"

[[bin]]
name = "saorsa-keygen"
path = "src/bin/keygen.rs"

[dependencies]
# Core (provides EVERYTHING: networking, DHT, security, trust, storage)
saorsa-core = { version = "0.10.0", default-features = false }
saorsa-pqc = "0.4.0"

# Payment verification - autonomi network lookup + EVM payment
autonomi = "0.9"
ant-evm = "0.1.19"
evmlib = "0.4.7"
xor_name = "5"

# Caching - LRU cache for verified XorNames
lru = "0.16.3"
parking_lot = "0.12"  # Efficient mutex for cache

# Migration: Decrypt ant-node data (read-only)
aes-gcm-siv = "0.11"
hkdf = "0.12"
sha2 = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

# Auto-upgrade
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
semver = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Serialization
rmp-serde = "1"
hex = "0.4"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

# Archive extraction for auto-upgrade
flate2 = "1"
tar = "0.4"

# Protocol serialization
bincode = "1"

# Random peer selection
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"
serde_json = "1"

# E2E test infrastructure
[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[features]
default = []
# Enable additional diagnostics for development
dev = []

# Attestation verification features - SECURITY IMPLICATIONS
# Without either feature, attestation uses mock verification (NO CRYPTOGRAPHIC SECURITY)
#
# zkvm-prover: STARK-based verification (POST-QUANTUM SECURE)
#   - Requires sp1-sdk and toolchain
#   - Heavier dependency but provides full cryptographic security
zkvm-prover = ["saorsa-core/zkvm-prover"]

# zkvm-verifier-groth16: Groth16/PLONK verification (NOT POST-QUANTUM SECURE)
#   - Uses BN254 elliptic curves
#   - Lighter dependency but vulnerable to quantum attacks
zkvm-verifier-groth16 = ["saorsa-core/zkvm-verifier-groth16"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster builds for development
opt-level = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Allow async functions that will have await statements added later
unused_async = "allow"
# Allow slightly complex functions during initial development
cognitive_complexity = "allow"
# Allow non-const functions during initial development (may need runtime features later)
missing_const_for_fn = "allow"

# Debian package metadata (cargo-deb)
[package.metadata.deb]
maintainer = "David Irvine <david.irvine@maidsafe.net>"
copyright = "2024-2025 Saorsa Labs"
license-file = ["LICENSE-MIT", "0"]
extended-description = """
Saorsa Node is a pure quantum-proof network node for the Saorsa decentralized network.
It provides secure, private, and censorship-resistant data storage using post-quantum
cryptography (ML-DSA-65, ML-KEM-768). Features include:
- Quantum-resistant authentication and encryption
- Distributed Hash Table (DHT) with anti-Sybil protection
- Automatic upgrades with staged rollout
- Bootstrap node support for testnet deployment
"""
section = "net"
priority = "optional"
assets = [
    ["target/release/saorsa-node", "usr/bin/", "755"],
    ["target/release/saorsa-keygen", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/saorsa-node/", "644"],
]
conf-files = ["/etc/saorsa/config.toml"]
depends = "$auto"
systemd-units = { enable = true }

# RPM package metadata (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/saorsa-node", dest = "/usr/bin/saorsa-node", mode = "755" },
    { source = "target/release/saorsa-keygen", dest = "/usr/bin/saorsa-keygen", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/saorsa-node/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
# Runtime dependencies auto-detected
